log (6).txt
[1;34m[INFO][0m æ­£åœ¨è®¾ç½®ç¼–è¯‘çŽ¯å¢ƒ (Proton Clang)...
[1;34m[INFO][0m æ­£åœ¨ç¼–è¯‘ä½äºŽ /workspaces/Kernel_driver_hack/kernel çš„å†…æ ¸æ¨¡å—...
make: Entering directory '/workspaces/kernel_workspace/android-kernel'
make[1]: Entering directory '/workspaces/kernel_workspace/android-kernel/out'
  CC [M]  /workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.o
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:125:46: error: extraneous ')' before ';'
        khack_set_pte_at, bp->addr, ptep, pte);
                                             ^
/workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.c:194:11: warning: ISO C90 forbids mixing declarations and code [-Wdeclaration-after-statement]
    pte_t pte_to_set = bp->original_pte;
          ^
1 warning and 1 error generated.
make[2]: *** [../scripts/Makefile.build:357: /workspaces/Kernel_driver_hack/kernel/mmu_breakpoint.o] Error 1
make[1]: *** [/workspaces/kernel_workspace/android-kernel/Makefile:1752: _module_/workspaces/Kernel_driver_hack/kernel] Error 2
make[1]: Leaving directory '/workspaces/kernel_workspace/android-kernel/out'
make: *** [Makefile:146: sub-make] Error 2
make: Leaving directory '/workspaces/kernel_workspace/android-kernel'
